--- a/index.html
+++ b/index.html
@@ -7,8 +7,117 @@
     <link rel="shortcut icon" href="./images/H.PNG" type="image/png">
     <title>Hilmi</title>
     <link href = "./styles/main.css" rel = "stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-    <img src="./images/hilmi.PNG" />
+    <script language="JavaScript">
+        function showInput() {
+            document.getElementById('interestform').value = "Thanks for your interest! We will be reaching out shortly!"
+            document.getElementById('interestform').disabled = true
+        }
+        function showInput2() {
+            document.getElementById('interestform2').value = "Thanks for your interest! We will be reaching out!"
+            document.getElementById('interestform2').disabled = true
+        }
+    </script>
+    <img class = "logo" src="./images/hilmi.PNG" />
+    <div class="container title">
+        <div class = "center">
+            <h1>Revolutionize Fashion Design with Hilmi</h1>
+            <h2 class ="grey">AI-driven tech packs made simple</h2>
+            <br>
+            <br>
+            <div class="input-group mb-3">
+                <input id="interestform" type="text" class="form-control" placeholder="Email Address" aria-label="Email Address" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" onclick="showInput()">Get Early Access!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <div class="center margin">
+        <h1>Simplified Design in Three Steps</h1>
+    </div>
+    <div class = "container-fluid margin">
+        <div class="row">
+            <div class = "center col-md-6">
+                <div class = "width">
+                    <h2>Upload your Mood Board</h2>
+                    <h6 class = "thick">Turn your inspiration into a reality by simply uploading your mood board or reference images.</h6>
+                </div>
+            </div>
+            <div class = "center col-md-6">
+                <img class = "template" src="./images/photo1.png" />
+            </div>
+        </div>
+    </div>
+    <div class = "container-fluid margin">
+        <div class="row flex-lg-row-reverse">
+            <div class = "center col-md-6">
+                <div class = "width">
+                    <h2>Chat with our AI</h2>
+                    <h6 class = "thick">Our intelligent assistant will guide you, ensuring every detail is captured for your design.</h6>
+                </div>
+            </div>
+            <div class = "center col-md-6">
+                <img class = "template" src="./images/photo2.png" />
+            </div>
+        </div>
+    </div>
+    <div class = "container-fluid margin">
+        <div class="row">
+            <div class = "center col-md-6">
+                <div class = "width">
+                    <h2>Receive your Tech Pack</h2>
+                    <h6 class = "thick">Get a comprehensive, accurate tech pack ready for manufacturing.</h6>
+                </div>
+            </div>
+            <div class = "center col-md-6">
+                    <div id="slides" class = "carousel slide" data-ride="carousel" data-touch = "true">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class = "fulltemplate" src="./images/photo3.png" />
+                            </div>
+                            <div class="carousel-item">
+                                <img class = "fulltemplate" src="./images/photo4.png" />
+                            </div>
+                            <div class="carousel-item">
+                                <img class = "fulltemplate" src="./images/photo5.png" />
+                            </div>
+                            <div class="carousel-item">
+                                <img class = "fulltemplate" src="./images/photo6.png" />
+                            </div>
+                            <div class="carousel-item">
+                                <img class = "fulltemplate" src="./images/photo7.png" />
+                            </div>
+                         </div>
+                         <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+            </div>
+        </div>
+    </div>
+    <div class="container footer">
+        <div class = "center">
+            <h2>Start your Journery with Hilmi today!</h2>
+            <br>
+            <div class="input-group mb-3">
+                <input id="interestform2" type="text" class="form-control" placeholder="Email Address" aria-label="Email Address" aria-describedby="basic-addon2">
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" onclick="showInput2()">Get Early Access!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
