--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="./images/H.PNG" type="image/png">
     <title>Hilmi</title>
     <link href = "./styles/main.css" rel = "stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Abril Fatface" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Crimson Text:300,400,500,600" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
@@ -23,7 +25,7 @@
             document.getElementById('interestform2').disabled = true
         }
     </script>
-    <img class = "logo" src="./images/hilmi.PNG" />
+    <img class = "logo" src="./images/hilmi.JPEG" />
     <div class="container title">
         <div class = "center">
             <h1>Revolutionize Fashion Design with Hilmi</h1>
