--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
     <div class="container footer">
         <div class = "center">
-            <h2>Start your Journery with Hilmi today!</h2>
+            <h2>Start your journey with Hilmi today!</h2>
             <br>
             <div class="input-group mb-3">
                 <input id="interestform2" type="text" class="form-control" placeholder="Email Address" aria-label="Email Address" aria-describedby="basic-addon2">
